pkg/crate/libzt/src/include/ZeroTierSockets.h

//----------------------------------------------------------------------------//
// Error codes                                                                //
//----------------------------------------------------------------------------//

/** Common error return values */
typedef enum {
    /** No error */
    ZTS_ERR_OK = 0,
    /** Socket error, see `zts_errno` */
    ZTS_ERR_SOCKET = -1,
    /** This operation is not allowed at this time. Or possibly the node hasn't been started */
    ZTS_ERR_SERVICE = -2,
    /** Invalid argument */
    ZTS_ERR_ARG = -3,
    /** No result (not necessarily an error) */
    ZTS_ERR_NO_RESULT = -4,
    /** Consider filing a bug report */
    ZTS_ERR_GENERAL = -5
} zts_error_t;
// Used by P/INVOKE wrappers
typedef void (*CppCallback)(void* msg);
#define ZTS_AF_INET   0x0002
#define ZTS_AF_INET6  0x000a
/**
 * @brief Instruct ZeroTier to look for node identity files at the given location. This is an
 * initialization function that can only be called before `zts_node_start()`.
 *
 * Note that calling this function is not mandatory and if it is not called the node's keys will be
 * kept in memory and retrievable via `zts_node_get_id_pair()`.
 *
 * See also: `zts_init_from_memory()`
 *
 * @param port Path Null-terminated file-system path string
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_from_storage(const char* path);
/**
 * @brief Instruct ZeroTier to use the identity provided in `key`. This is an initialization
 * function that can only be called before `zts_node_start()`.
 *
 * Note that calling this function is not mandatory and if it is not called the node's keys will be
 * kept in memory and retrievable via `zts_node_get_id_pair()`.
 *
 * See also: `zts_init_from_storage()`
 *
 * @param key Path Null-terminated file-system path string
 * @param len Length of `key` buffer
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_from_memory(const char* key, unsigned int len);
/**
 * @brief Set the event handler function. This is an initialization function that can only be called
 * before `zts_node_start()`.
 *
 * @param callback A function pointer to the event handler function
 * @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_init_set_event_handler(PythonDirectorCallbackClass* callback);
ZTS_API int ZTCALL zts_init_set_event_handler(CppCallback callback);
int zts_init_set_event_handler(jobject obj_ref, jmethodID id);
ZTS_API int ZTCALL zts_init_set_event_handler(void (*callback)(void*));
/**
 * @brief Get the nickname of the network
 *
 * @param net_id Network ID
 * @param dst Destination string buffer
 * @param len Length of destination string buffer
 *
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_net_get_name(uint64_t net_id, char* dst, unsigned int len);
/**
 * @brief Get the status of the network
 *
 * @param net_id Network ID
 *
 * @return Status
 */
ZTS_API int ZTCALL zts_net_get_status(uint64_t net_id);
/**
 * @brief Get the type of network (public or private.)
 *
 * @param net_id Network ID
 *
 * @return Type
 */
ZTS_API int ZTCALL zts_net_get_type(uint64_t net_id);
/**
 * @brief Return whether a managed route of the given address family has been assigned by the
 * network
 *
 * @param net_id Network ID
 * @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`
 * @return `1` if true, `0` if false.
 */
ZTS_API int ZTCALL zts_route_is_assigned(uint64_t net_id, unsigned int family);
/**
 * @brief Start the ZeroTier node. Should be called after calling the relevant
 *    `zts_init_*` functions for your application. To enable storage call
 *    `zts_init_from_storage()` before this function. To enable event callbacks
 *     call `zts_init_set_event_handler()` before this function.
 *
 * Note: If neither `zts_init_from_storage()` or `zts_init_from_memory()` are
 * called a new identity will be generated and will be retrievable via
 * `zts_node_get_id_pair()` *after* the node has started.
 *
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem.
 */
ZTS_API int ZTCALL zts_node_start();
/**
 * @brief Return whether the node is online (Can reach the Internet)
 *
 * @return `1` if true, `0` if false.
 */
ZTS_API int ZTCALL zts_node_is_online();
/**
 * @brief Get the public node identity (aka `node_id`). Callable only after the node has been
 * started.
 *
 * @return Identity in numerical form
 */
ZTS_API uint64_t ZTCALL zts_node_get_id();
/**
 * @brief Copy the current node's public (and secret!) identity into a buffer.
 *
 * `WARNING`: This function exports your secret key and should be used carefully.
 *
 * @param key User-provided destination buffer
 * @param key_dst_len Length of user-provided destination buffer. Will be set to
 * number of bytes copied.
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_node_get_id_pair(char* key, unsigned int* key_dst_len);
/**
 * @brief Get the primary port to which the node is bound. Callable only after the node has been
 * started.
 *
 * @return Port number
 */
ZTS_API int ZTCALL zts_node_get_port();
/**
 * @brief Stop the ZeroTier node and bring down all virtual network
 *     transport services. Callable only after the node has been started.
 *
 * While the ZeroTier will stop, the stack driver (with associated
 * timers) will remain active in case future traffic processing is required.
 * To stop all activity and free all resources use `zts_free()` instead.
 *
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem.
 */
ZTS_API int ZTCALL zts_node_stop();
/**
 * @brief Stop all background threads, bring down all transport services, free all
 *     resources. After calling this function an application restart will be
 *     required before the library can be used again. Callable only after the node
 *     has been started.
 *
 * This should be called at the end of your program or when you do not
 * anticipate communicating over ZeroTier again.
 *
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem.
 */
ZTS_API int ZTCALL zts_node_free();
/**
 * @brief Orbit a given moon (user-defined root server)
 *
 * @param moon_roots_id World ID
 * @param moon_seed Seed ID
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_moon_orbit(uint64_t moon_roots_id, uint64_t moon_seed);
/**
 * @brief De-orbit a given moon (user-defined root server)
 *
 * @param moon_roots_id World ID
 * @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node
 *     experiences a problem, `ZTS_ERR_ARG` if invalid argument.
 */
ZTS_API int ZTCALL zts_moon_deorbit(uint64_t moon_roots_id);
//----------------------------------------------------------------------------//
// Statistics                                                                 //
//----------------------------------------------------------------------------//

/**
 * Structure containing counters for various protocol statistics
 */
typedef struct {
    /** Number of link packets transmitted */
    uint32_t link_tx;
    /** Number of link packets received */
    uint32_t link_rx;
    /** Number of link packets dropped */
    uint32_t link_drop;
    /** Aggregate number of link-level errors */
    uint32_t link_err;

    /** Number of etharp packets transmitted */
    uint32_t etharp_tx;
    /** Number of etharp packets received */
    uint32_t etharp_rx;
    /** Number of etharp packets dropped */
    uint32_t etharp_drop;
    /** Aggregate number of etharp errors */
    uint32_t etharp_err;

    /** Number of IPv4 packets transmitted */
    uint32_t ip4_tx;
    /** Number of IPv4 packets received */
    uint32_t ip4_rx;
    /** Number of IPv4 packets dropped */
    uint32_t ip4_drop;
    /** Aggregate number of IPv4 errors */
    uint32_t ip4_err;

    /** Number of IPv6 packets transmitted */
    uint32_t ip6_tx;
    /** Number of IPv6 packets received */
    uint32_t ip6_rx;
    /** Number of IPv6 packets dropped */
    uint32_t ip6_drop;
    /** Aggregate number of IPv6 errors */
    uint32_t ip6_err;

    /** Number of ICMPv4 packets transmitted */
    uint32_t icmp4_tx;
    /** Number of ICMPv4 packets received */
    uint32_t icmp4_rx;
    /** Number of ICMPv4 packets dropped */
    uint32_t icmp4_drop;
    /** Aggregate number of ICMPv4 errors */
    uint32_t icmp4_err;

    /** Number of ICMPv6 packets transmitted */
    uint32_t icmp6_tx;
    /** Number of ICMPv6 packets received */
    uint32_t icmp6_rx;
    /** Number of ICMPv6 packets dropped */
    uint32_t icmp6_drop;
    /** Aggregate number of ICMPv6 errors */
    uint32_t icmp6_err;

    /** Number of UDP packets transmitted */
    uint32_t udp_tx;
    /** Number of UDP packets received */
    uint32_t udp_rx;
    /** Number of UDP packets dropped */
    uint32_t udp_drop;
    /** Aggregate number of UDP errors */
    uint32_t udp_err;

    /** Number of TCP packets transmitted */
    uint32_t tcp_tx;
    /** Number of TCP packets received */
    uint32_t tcp_rx;
    /** Number of TCP packets dropped */
    uint32_t tcp_drop;
    /** Aggregate number of TCP errors */
    uint32_t tcp_err;

    /** Number of ND6 packets transmitted */
    uint32_t nd6_tx;
    /** Number of ND6 packets received */
    uint32_t nd6_rx;
    /** Number of ND6 packets dropped */
    uint32_t nd6_drop;
    /** Aggregate number of ND6 errors */
    uint32_t nd6_err;
} zts_stats_counter_t;