pkg/crate/libzt/src/libzt.rs

extern "C" {
    #[doc = " @brief Get the nickname of the network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param dst Destination string buffer"]
    #[doc = " @param len Length of destination string buffer"]
    #[doc = ""]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_net_get_name(
        net_id: u64,
        dst: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the status of the network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = ""]
    #[doc = " @return Status"]
    pub fn zts_net_get_status(net_id: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the type of network (public or private.)"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = ""]
    #[doc = " @return Type"]
    pub fn zts_net_get_type(net_id: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Return whether a managed route of the given address family has been assigned by the"]
    #[doc = " network"]
    #[doc = ""]
    #[doc = " @param net_id Network ID"]
    #[doc = " @param family `ZTS_AF_INET`, or `ZTS_AF_INET6`"]
    #[doc = " @return `1` if true, `0` if false."]
    pub fn zts_route_is_assigned(
        net_id: u64,
        family: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Start the ZeroTier node. Should be called after calling the relevant"]
    #[doc = "    `zts_init_*` functions for your application. To enable storage call"]
    #[doc = "    `zts_init_from_storage()` before this function. To enable event callbacks"]
    #[doc = "     call `zts_init_set_event_handler()` before this function."]
    #[doc = ""]
    #[doc = " Note: If neither `zts_init_from_storage()` or `zts_init_from_memory()` are"]
    #[doc = " called a new identity will be generated and will be retrievable via"]
    #[doc = " `zts_node_get_id_pair()` *after* the node has started."]
    #[doc = ""]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem."]
    pub fn zts_node_start() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Return whether the node is online (Can reach the Internet)"]
    #[doc = ""]
    #[doc = " @return `1` if true, `0` if false."]
    pub fn zts_node_is_online() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the public node identity (aka `node_id`). Callable only after the node has been"]
    #[doc = " started."]
    #[doc = ""]
    #[doc = " @return Identity in numerical form"]
    pub fn zts_node_get_id() -> u64;
}
extern "C" {
    #[doc = " @brief Copy the current node's public (and secret!) identity into a buffer."]
    #[doc = ""]
    #[doc = " `WARNING`: This function exports your secret key and should be used carefully."]
    #[doc = ""]
    #[doc = " @param key User-provided destination buffer"]
    #[doc = " @param key_dst_len Length of user-provided destination buffer. Will be set to"]
    #[doc = " number of bytes copied."]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_node_get_id_pair(
        key: *mut ::std::os::raw::c_char,
        key_dst_len: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get the primary port to which the node is bound. Callable only after the node has been"]
    #[doc = " started."]
    #[doc = ""]
    #[doc = " @return Port number"]
    pub fn zts_node_get_port() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Stop the ZeroTier node and bring down all virtual network"]
    #[doc = "     transport services. Callable only after the node has been started."]
    #[doc = ""]
    #[doc = " While the ZeroTier will stop, the stack driver (with associated"]
    #[doc = " timers) will remain active in case future traffic processing is required."]
    #[doc = " To stop all activity and free all resources use `zts_free()` instead."]
    #[doc = ""]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem."]
    pub fn zts_node_stop() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Stop all background threads, bring down all transport services, free all"]
    #[doc = "     resources. After calling this function an application restart will be"]
    #[doc = "     required before the library can be used again. Callable only after the node"]
    #[doc = "     has been started."]
    #[doc = ""]
    #[doc = " This should be called at the end of your program or when you do not"]
    #[doc = " anticipate communicating over ZeroTier again."]
    #[doc = ""]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem."]
    pub fn zts_node_free() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Orbit a given moon (user-defined root server)"]
    #[doc = ""]
    #[doc = " @param moon_roots_id World ID"]
    #[doc = " @param moon_seed Seed ID"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_moon_orbit(moon_roots_id: u64, moon_seed: u64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief De-orbit a given moon (user-defined root server)"]
    #[doc = ""]
    #[doc = " @param moon_roots_id World ID"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument."]
    pub fn zts_moon_deorbit(moon_roots_id: u64) -> ::std::os::raw::c_int;
}
#[doc = " Structure containing counters for various protocol statistics"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_stats_counter_t {
    #[doc = " Number of link packets transmitted"]
    pub link_tx: u32,
    #[doc = " Number of link packets received"]
    pub link_rx: u32,
    #[doc = " Number of link packets dropped"]
    pub link_drop: u32,
    #[doc = " Aggregate number of link-level errors"]
    pub link_err: u32,
    #[doc = " Number of etharp packets transmitted"]
    pub etharp_tx: u32,
    #[doc = " Number of etharp packets received"]
    pub etharp_rx: u32,
    #[doc = " Number of etharp packets dropped"]
    pub etharp_drop: u32,
    #[doc = " Aggregate number of etharp errors"]
    pub etharp_err: u32,
    #[doc = " Number of IPv4 packets transmitted"]
    pub ip4_tx: u32,
    #[doc = " Number of IPv4 packets received"]
    pub ip4_rx: u32,
    #[doc = " Number of IPv4 packets dropped"]
    pub ip4_drop: u32,
    #[doc = " Aggregate number of IPv4 errors"]
    pub ip4_err: u32,
    #[doc = " Number of IPv6 packets transmitted"]
    pub ip6_tx: u32,
    #[doc = " Number of IPv6 packets received"]
    pub ip6_rx: u32,
    #[doc = " Number of IPv6 packets dropped"]
    pub ip6_drop: u32,
    #[doc = " Aggregate number of IPv6 errors"]
    pub ip6_err: u32,
    #[doc = " Number of ICMPv4 packets transmitted"]
    pub icmp4_tx: u32,
    #[doc = " Number of ICMPv4 packets received"]
    pub icmp4_rx: u32,
    #[doc = " Number of ICMPv4 packets dropped"]
    pub icmp4_drop: u32,
    #[doc = " Aggregate number of ICMPv4 errors"]
    pub icmp4_err: u32,
    #[doc = " Number of ICMPv6 packets transmitted"]
    pub icmp6_tx: u32,
    #[doc = " Number of ICMPv6 packets received"]
    pub icmp6_rx: u32,
    #[doc = " Number of ICMPv6 packets dropped"]
    pub icmp6_drop: u32,
    #[doc = " Aggregate number of ICMPv6 errors"]
    pub icmp6_err: u32,
    #[doc = " Number of UDP packets transmitted"]
    pub udp_tx: u32,
    #[doc = " Number of UDP packets received"]
    pub udp_rx: u32,
    #[doc = " Number of UDP packets dropped"]
    pub udp_drop: u32,
    #[doc = " Aggregate number of UDP errors"]
    pub udp_err: u32,
    #[doc = " Number of TCP packets transmitted"]
    pub tcp_tx: u32,
    #[doc = " Number of TCP packets received"]
    pub tcp_rx: u32,
    #[doc = " Number of TCP packets dropped"]
    pub tcp_drop: u32,
    #[doc = " Aggregate number of TCP errors"]
    pub tcp_err: u32,
    #[doc = " Number of ND6 packets transmitted"]
    pub nd6_tx: u32,
    #[doc = " Number of ND6 packets received"]
    pub nd6_rx: u32,
    #[doc = " Number of ND6 packets dropped"]
    pub nd6_drop: u32,
    #[doc = " Aggregate number of ND6 errors"]
    pub nd6_err: u32,
}
